add missing headers, removed unused code